app.js and navbar updated

--- a/Homework.html
+++ b/Homework.html
@@ -38,7 +38,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
     <!-- IMPORT ALL THE BOOTSTRAP RELATED CSS & SCRIPTS-->
 
     <style>
-        /* EXERCISE 1
+    /* EXERCISE 1
             For every Album displayed in the page we'd like to have a consistent appearence.
             Create the template of an Album component (you can start from a bootstrap one or create your own)
             You will use it to display every album in the page.
@@ -55,10 +55,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
             create CSS rules to style them if needed
             ...to make sure every Album component looks the same.
          */
-        
-        .navbar-nav {
-            @media screen {}
-        }
+    }
     </style>
 </head>
 
@@ -74,7 +71,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
               <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -107,7 +104,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body">
                         <p class="card-title">Slipknot</p>
                         <p class="card-text">Nu Metal</p>
-                        <a href="#" class="btn btn-primary">Go to Album</a>
+                        <a href="#" class="btn btn-primary bg-dark">Go to Album</a>
                     </div>
                 </div>
             </div>
@@ -119,7 +116,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body">
                         <p class="card-title">Ray Charles</p>
                         <p class="card-text">Blues</p>
-                        <a href="#" class="btn btn-primary">Go to Album</a>
+                        <a href="#" class="btn btn-primary bg-dark">Go to Album</a>
                     </div>
                 </div>
             </div>
@@ -131,7 +128,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body">
                         <p class="card-title">Iron Maiden</p>
                         <p class="card-text">Heavy Metal</p>
-                        <a href="#" class="btn btn-primary">Go to Album</a>
+                        <a href="#" class="btn btn-primary bg-dark">Go to Album</a>
                     </div>
                 </div>
             </div>
@@ -143,11 +140,11 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body">
                         <p class="card-title">Eddie Vedder</p>
                         <p class="card-text">Rock</p>
-                        <a href="#" class="btn btn-primary">Go to Album</a>
+                        <a href="#" class="btn btn-primary bg-dark">Go to Album</a>
                     </div>
                 </div>
             </div>
-        </div>
+        </div><br><br><br>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 mb-md-0">
             <div class="card shadow border-0">
                 <div class="card text-center" style="width: 18rem;">
@@ -155,7 +152,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body">
                         <p class="card-title">Rammstein</p>
                         <p class="card-text">Metal</p>
-                        <a href="#" class="btn btn-primary">Go to Album</a>
+                        <a href="#" class="btn btn-primary bg-dark">Go to Album</a>
                     </div>
                 </div>
             </div>
@@ -167,7 +164,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body ">
                         <p class="card-title ">Pink Floyd</p>
                         <p class="card-text ">Rock</p>
-                        <a href="# " class="btn btn-primary ">Go to Album</a>
+                        <a href="# " class="btn btn-primary bg-dark ">Go to Album</a>
                     </div>
                 </div>
             </div>
@@ -179,7 +176,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body ">
                         <p class="card-title ">Slayer</p>
                         <p class="card-text ">Heavy Metal</p>
-                        <a href="# " class="btn btn-primary ">Go to Album</a>
+                        <a href="# " class="btn btn-primary bg-dark">Go to Album</a>
                     </div>
                 </div>
             </div>
@@ -191,7 +188,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     <div class="card-body ">
                         <p class="card-title ">Judas Priest</p>
                         <p class="card-text ">Rock</p>
-                        <a href="# " class="btn btn-primary ">Go to Album</a>
+                        <a href="# " class="btn btn-primary bg-dark ">Go to Album</a>
                     </div>
                 </div>
             </div>
